--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,16 +7,34 @@ http {
     charset utf-8;
 
     server {
-        listen 80 default_server;
-
-        server_name _;
+        listen 80;
+        server_name financer.digital www.financer.digital;
 
         location / {
-            proxy_pass http://financer.digital:8090/;
-        }
-
-        location ~ /.well-known/acme-challenge/ {
-            root /var/www/certbot;
+            proxy_pass http://localhost:8090;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
+
+    server {
+        listen 443 ssl;
+        server_name financer.digital www.financer.digital;
+
+        ssl_certificate /etc/letsencrypt/live/financer.digital/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/financer.digital/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+        location / {
+            proxy_pass http://localhost:8090;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
 }
